@@ -16,6 +16,10 @@ ck (1.3.xxxx) RELEASED; urgency=medium
       $ ck edit compiler:gcc-49x
   * adding --min flag to ''load'' function to output 
     only desc and dict to console 
+  * adding --without_files to avoid copying files 
+    when copying/moving CK entries (useful
+    to create templates for example for benchmarks
+    or data sets)
 
 ck (1.2.0605) UNRELEASED; urgency=medium
   * several extra features to improve autotuning
